# advent2023

./: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
src/shared/: lib.rs
